# NASA

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yaml  package-lock.json  pyproject.toml  start-dev.sh
backend/: Dockerfile
backend/app/: container.py  main.py  settings.py
backend/app/components/: app_logger.py
backend/app/components/mixins/: __init__.py  filter.py
backend/app/components/utils/: pages.py
backend/app/dto/: __init__.py  base.py  nasa.py  paginator.py  response.py
backend/app/endpoints/: __init__.py  nasa.py
backend/app/enums/: __init__.py  nasa.py
backend/app/providers/: __init__.py  app_logger.py  nasa.py  settings.py
backend/app/service/: __init__.py  nasa.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: Filters.tsx  MissionData.tsx  Paginator.tsx
frontend/src/css/: Filters.css  MissionData.css  Paginator.css
frontend/src/types/: filters.ts  mission.ts
