[project]
name = "nasa-parser"
version = "0.1.0"
description = "Сбор данных изображений, полученных с Марса"
authors = [
    {name = "blackmamba2004",email = "vasilsemen04@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
package-mode = false

[tool.poetry.dependencies]
fastapi = "^0.115.12"
uvicorn = "^0.34.0"
aiohttp = "^3.11.16"
dishka = "^1.5.2"
colorlog = "^6.9.0"
pydantic-settings = "^2.8.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
httpx = "^0.28.1"
faker = "^37.1.0"
pytest-asyncio = "^0.26.0"

[tool.pytest.ini_options]
minversion = "8.3"
addopts = "-v"
testpaths = [
    "backend/test",
    "backend/test_integr",
]
asyncio_default_fixture_loop_scope="session"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"